sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:4: error: not found: value sorted
  sorted=false
  ^AlgBubbleSort1:6: error: not found: value sorted
  while(!sorted){
         ^AlgBubbleSort1:8: error: not found: value sorted
    sorted=true
    ^AlgBubbleSort1:10: error: not found: value nbVal
    nbVal = getNombreValeurs()
    ^AlgBubbleSort1:12: error: not found: value nbVal
    for(i<-0 to nbVal){
                ^AlgBubbleSort1:15: error: not found: value sorted
        sorted=false
        ^